# OpenGl-Learning

./: CMakeLists.txt  README.md  glad.c  main.cpp
application/: Application.cpp  Application.h  CMAKELists.txt
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera..cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
assets/shaders/: fragment.glsl  vertex.glsl
glframework/: CMAKELists.txt  core.h  geometry.cpp  geometry.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: CMAKELists.txt  checkError.cpp  checkError.h
